[package]
name = "langcraft_api"
version = "0.1.2"
authors = ["Carson Swoveland <sciencedude2003@gmail.com>"]
edition = "2018"
description = "Interface for programs for use with Langcraft"
readme = "README.md"
repository = "https://github.com/SuperTails/langcraft_api"
license = "MIT OR Apache-2.0"
categories = ["hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
